--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
 
 const SHEET_ID = "1S_NX1UxOB38aB-9As9gC8zH4BQMSuONk4g7f5jL8nmE";
 
-const PROTEIN_TAGS = ["beef","chicken","pork","seafood","vegetarian"];
-const CUISINE_TAGS = ["italian","mexican","indonesian","thai","asian"];
+const PROTEIN_TAGS = ["beef", "chicken", "lamb", "fish", "tofu", "tempe"];
+const CUISINE_TAGS = ["italian", "indonesian", "mediterranean", "asian", "mexican"];
+
 
 /* ===================== DATA URLS ===================== */
 
