--- a/index.html
+++ b/index.html
@@ -124,14 +124,10 @@ Promise.all([
   const container = document.getElementById("planner");
   container.innerHTML = "";
 
-  const headers = parseCSV(planCSV)[0].map(h => h.toLowerCase());
+ plan.forEach(p => {
+  const day = p[0];
+  const meal = p[1];
 
-const dayIndex = headers.indexOf("day");
-const mealIndex = headers.indexOf("meal");
-
-plan.forEach(p => {
-  const day = p[dayIndex];
-  const meal = p[mealIndex];
 
     const key = `${day}-${meal}`;
     locks[key] = false;
